--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential
+      - name: Install additional libraries
+        run: |
+          sudo apt-get install -y libxext-dev libbsd-dev zlib1g-dev
       - name: Build project
         run: make all
