feat: add plane to stub

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,20 @@
 {
-	"files.associations": {
-		"*.h": "c",
-	},
-	"[c]": {
-		"editor.tabSize": 4,
-		"editor.insertSpaces": false,
-		"editor.rulers": [
-			80
-		],
-		"editor.defaultFormatter": null,
-		"editor.wordBasedSuggestions": "allDocuments",
-		"editor.suggest.insertMode": "replace",
-		"editor.semanticHighlighting.enabled": true,
-		"editor.renderWhitespace": "all",
-		"files.trimTrailingWhitespace": true,
-		"files.insertFinalNewline": true
-	}
+  "files.associations": {
+    "*.dbclient-js": "javascript",
+    "*.css": "css",
+    "*.h": "c",
+    "__node_handle": "c"
+  },
+  "[c]": {
+    "editor.tabSize": 4,
+    "editor.insertSpaces": false,
+    "editor.rulers": [80],
+    "editor.defaultFormatter": null,
+    "editor.wordBasedSuggestions": "allDocuments",
+    "editor.suggest.insertMode": "replace",
+    "editor.semanticHighlighting.enabled": true,
+    "editor.renderWhitespace": "all",
+    "files.trimTrailingWhitespace": true,
+    "files.insertFinalNewline": true
+  }
 }
